--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,3 +18,14 @@ log4j.appender.File.MaxFileSize = 10MB
 log4j.appender.File.Threshold = ALL  
 log4j.appender.File.layout = org.apache.log4j.PatternLayout  
 log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n  
+
+#打印sql语句中的参数值
+log4j.logger.org.hibernate.SQL =  DEBUG
+log4j.logger.org.hibernate.engine.QueryParameters = DEBUG
+log4j.logger.org.hibernate.engine.query.HQLQueryPlan = DEBUG
+
+#打印sql语句到日志
+log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
+log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor = TRACE
+
+
