--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootLogger=INFO,Console,File
+log4j.rootLogger=INFO,Console,File,MongoDB
 
 
 org.apache.jasper.servlet.TldScanner.level = FINE
@@ -19,6 +19,13 @@ log4j.appender.File.Threshold=info
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n
 
+
+
+log4j.appender.MongoDB=org.log4mongo.MongoDbAppender
+log4j.appender.MongoDB.databaseName=TraceLog
+log4j.appender.MongoDB.collectionName=logs_request
+log4j.appender.MongoDB.hostname=localhost
+log4j.appender.MongoDB.port=27017
 
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
