--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootLogger=INFO,Console,File,MongoDB
+log4j.rootLogger=INFO,Console,File
 
 
 org.apache.jasper.servlet.TldScanner.level = FINE
