更改数据采集覆盖表的逻辑

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ org.apache.jasper.servlet.TldScanner.level = FINE
 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
-log4j.appender.Console.Threshold=info
+log4j.appender.Console.Threshold=ALL
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%c] - %m%n
 
