--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,9 +34,9 @@
   <!--</listener>-->
   <context-param>
 
-    <param-name>spring.profiles.default</param-name>
+    <param-name>spring.profiles.active</param-name>
 
-    <param-value>development</param-value>
+    <param-value>production</param-value>
 
   </context-param>
 </web-app>
