fix(model):工站修改

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -22,9 +22,9 @@ log4j.appender.File.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c
 
 
 
-log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
-log4j.logger.org.hibernate.SQL=DEBUG
-log4j.logger.org.hibernate.engine.QueryParameters=DEBUG
-log4j.logger.org.hibernate.engine.query.HQLQueryPlan=DEBUG
+#log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+#log4j.logger.org.hibernate.SQL=DEBUG
+#log4j.logger.org.hibernate.engine.QueryParameters=DEBUG
+#log4j.logger.org.hibernate.engine.query.HQLQueryPlan=DEBUG
 
