--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
     <param-name>spring.profiles.active</param-name>
 
-    <param-value>production</param-value>
+    <param-value>development</param-value>
 
   </context-param>
 </web-app>
